# Calculos-Geom-tricos

./: Makefile  README.md
.github/classroom/: autograding.json
include/: circulo.h  cubo.h  esfera.h  paralelepipedo.h  piramide.h  quadrado.h  retangulo.h  triangulo.h
src/: CMakeLists.txt  circulo.cpp  cubo.cpp  esfera.cpp  main.cpp  paralelepipedo.cpp  piramide.cpp  quadrado.cpp  retangulo.cpp  triangulo.cpp
